2018-02-07 Added attribute role in TrueFalse for screen reader apps.
2018-02-06 Fixed issues with scaling in Drawing
2018-02-01 Fixed issue with saving empty inlineStyles or classStyles.
2018-01-30 Added alt text for images added by RichTextEditor and for Memogame.
2018-01-30 Fixed Double State Button not activating on keyboard input.
2018-01-29 Fixed Image gap and multiplegap not getting image source alt text
2018-01-26 Fixed addon TrueFalse now only adds text as checkbox alt text
2018-01-24 Fixed addon TrueFalse not being read correctly by NVDA 
2018-01-23 Fixed url resolving for modules
2018-01-23 Fixed Choice chosen element not reseting
2018-01-23 Fixed tests in TTS and Text Identification
2018-01-23 Added tabindex in Image Identification, Image Source and Text Identification
2018-01-23 Added TTS functionality
2018-01-19 Puzzle addon allows drag'n'dropping elements; fixed showing correctness marks for many puzzle addons at once; now it sends valueChanged event
2018-01-18 Added item handling of MultiAudio in Multiple Audio Controler Binder
2018-01-18 Fixed events in LearnPen Data module
2018-01-17 Fixed player start with subset of pages from exported lesson.
2018-01-17 Fixed reading data in LearnPen Report module
2018-01-15 Added time labels property for video addon.
2018-01-10 Fixed problem with saving and restoring modules xml.
2018-01-10 Fixed deselects the selected widget when showing errors, correct answer, or resetting
2018-01-09 Fixed setting enable tabindex property
2018-01-05 Added Do not block in check mode property to DoubleStateButton
2018-01-04 Fixed issue with too large coordinates in Coloring
2018-01-04 Fixed showing system keyboard for eKeyboard on mobiles.
2018-01-03 Fixed inline-css error with not unescaping apostrophe
2018-01-03 Fixed problem with opening popup.
2018-01-03 Fixed problem with moving to next gap in eKeyboard module
2017-12-28 Added possibility to define many layouts for lesson depending on device threshold